<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="73dp"
        android:layout_marginTop="40dp"
        android:text="Aplicación de Conversión de Unidades de Medida🚀"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_distancia"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/baby_blue"
        android:text="@string/distancia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_divisas"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue_grotto"
        android:text="@string/divisas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_distancia" />

    <Button
        android:id="@+id/button3"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_divisas" />

    <Button
        android:id="@+id/btn_temp"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue_gray"
        android:text="@string/temperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_divisas" />

    <Button
        android:id="@+id/btn_masa"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/royal_blue"
        android:text="@string/masa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/btn_tiempo"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/midnight_blue"
        android:text="@string/tiempo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_masa"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>